--- a/src/Page/Accomodation/style.css
+++ b/src/Page/Accomodation/style.css
@@ -7,7 +7,7 @@
     padding:8px;
     transition:  0.3s;
     cursor: pointer !important;
-   width: 30%;
+   
   }
   
   .hover-punter:hover{
@@ -24,6 +24,8 @@
     cursor: pointer;
     border-radius: 10px;
     justify-content: center;
+    margin-top: 5px;
+    
   }
   
   .rdrCalendarWrapper {
