--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,61 @@ code {
     z-index: 10000;
 }
 
+.loading-opacity {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+  z-index: 1000;
+  background: black;
+  color: white;
+}
+
+
+.cart{
+  transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform: translateX(0%);
+}
+
+
+.cart.active{
+  transform: translateX(250%);
+}
+
+.cartIcon{
+  align-items: center;
+  background:orangered;
+  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  height: 40px;
+  justify-content: center;
+  padding: 4px;
+  position: fixed;
+  right: 8px;
+  top: 120px;
+  transition: all .3s ease;
+  width: 42px;
+  z-index: 20;
+}
+
+.cartIcon-Number{
+  background: black;
+  border-radius: 9999px;
+  cursor: pointer;
+  display: flex;
+  height: 18px;
+  justify-content: center;
+  padding: 4px;
+  align-items: center;
+  position: fixed;
+  right: 8px;
+  top: 120px;
+  transition: all .3s ease;
+  width: 21px;
+  z-index: 20;
+  color: white;
+}
