--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-family: 'Lora', Georgia, "Times New Roman", serif;
+  font-family: 'Raleway', Helvetica, Arial, Lucida, sans-serif;
 }
 
 code {
