--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,13 @@ code {
   position: absolute;
   bottom: 1px;
 }
+
+
+
+.font-lora{
+  font-family: 'Lora', Georgia, "Times New Roman", serif;
+}
+
+.words{
+  font-weight: 400;
+}
