--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,7 @@ code {
   background: white;
   box-shadow: 17px 20px 40px rgba(0, 0, 0, .21) ;
 }
+
+.font-weit{
+  font-weight: 600 !important;
+}
