iniital commit update

--- a/src/Page/Home/home.css
+++ b/src/Page/Home/home.css
@@ -153,11 +153,9 @@
   }
   
   .rdrStartEdge{
-    background-color: #16813d;
-   
+    background-color: black;
   }
 
   .rdrEndEdge{
-    background-color: #16813d;
-  
+    background-color: black;
   }
